native passages work now

--- a/meson.build
+++ b/meson.build
@@ -6,12 +6,13 @@ py3_mod = import('python')
 py3_inst = py3_mod.find_installation('python3')
 
 libgraph = dependency('libgraph', fallback : ['libgraph', 'graph_dep'])
-libpass = dependency('libpass', fallback : ['libpass', 'pass_dep'])
 
 build_dir = meson.current_build_dir()
+
+subdir('passages')
 
 test('ara tester',
 	py3_inst,
 	args : [files('arsa.py', 'test/osek.ll'), '--os', 'osek'],
-	env : ['PYTHONPATH=' + 'subprojects/libpass/' + ':' + 'subprojects/libgraph']
+	env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
 )
