tests: new dependency test

--- a/meson.build
+++ b/meson.build
@@ -8,8 +8,10 @@ py3_inst = py3_mod.find_installation('python3')
 libgraph = dependency('libgraph', fallback : ['libgraph', 'graph_dep'])
 
 build_dir = meson.current_build_dir()
+source_dir = meson.source_root()
 
 subdir('passages')
+subdir('test')
 
 test('ara tester',
 	py3_inst,
