tests: first test for native passages
Unready. Does not do anything. Should write some stuff in the graph.
Unfortunately the interface is missing, so the test is only a stub.

--- a/test/meson.build
+++ b/test/meson.build
@@ -3,3 +3,5 @@ test('dependency_resolving',
         args : files('dependency_resolving.py'),
         env : ['PYTHONPATH=' + ':'.join([source_dir, passdir, 'subprojects/libgraph'])]
 )
+
+subdir('native_passage_test')
