--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -1,13 +1,13 @@
 llvm_dep = dependency('llvm', version : '>=6.0')
 
-native_passage_pyx_cpp = custom_target('native_passage_pyx',
-  output : 'native_passage_pyx.cpp',
-  input : 'native_passage.pyx',
+native_step_pyx_cpp = custom_target('native_step_pyx',
+  output : 'native_step_pyx.cpp',
+  input : 'native_step.pyx',
   command : [cython, '-I', '../subprojects/libgraph', '@INPUT@', '--cplus', '-3', '-o', '@OUTPUT@'],
 )
 
-plib = py3_inst.extension_module('native_passage',
-  native_passage_pyx_cpp,
+plib = py3_inst.extension_module('native_step',
+  native_step_pyx_cpp,
   'llvm.cpp',
   'test.cpp',
   dependencies : [py3_inst.dependency(), libgraph, llvm_dep]
