--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -8,6 +8,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
 
 plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
+  'FreeRTOSinstances.cpp',
   'llvm.cpp',
   'test.cpp',
   dependencies : [py3_inst.dependency(), libgraph, llvm_dep]
