DetectInteractionsPass is added to ARSA project:

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -9,6 +9,7 @@ native_step_pyx_cpp = custom_target('native_step_pyx',
 plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
   'FreeRTOSinstances.cpp',
+  'DetectInteractions.cpp',
   'llvm.cpp',
   'test.cpp',
   dependencies : [py3_inst.dependency(), libgraph, llvm_dep]
