Refactoring of architecture:

--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -10,6 +10,8 @@ plib = py3_inst.extension_module('native_step',
   native_step_pyx_cpp,
   'FreeRTOSinstances.cpp',
   'DetectInteractions.cpp',
+  'Validation.cpp',
+  'IntermediateAnalysis.cpp',
   'llvm.cpp',
   'test.cpp',
   dependencies : [py3_inst.dependency(), libgraph, llvm_dep]
