--- a/meson.build
+++ b/meson.build
@@ -19,6 +19,8 @@ test('ara tester',
 	#args : [files('arsa.py', 'test/data/GPSLogger.ll','test/data/ScreenManager.ll','test/data/GPSThread.ll','test/data/SDThread.ll','test/data/LEDThread.ll','test/data/ButtonsThread.ll','test/data/SdFatSPIDriver.ll','test/data/GPSDataModel.ll','test/data/SpeedScreen.ll'), '--os', 'freertos','--application_file' , 'invalid_mutex.cc'],
 	
 	#args : [files('arsa.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'timer.cc'],
-    args : [files('arsa.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'priority_inversion.cc'],
+
+	# priority inversion test case
+    args : [files('arsa.py'), '--os', 'freertos', freertos_targets[13]],
 	env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
 )
