Added warning classes examples and testcases:

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -20,7 +20,8 @@ freertos_includes = files(join_paths(freertos_path, 'croutine.h'),
 freertos_targets = []
 foreach app : ['a', 'b', 'c', 'd', 'e', 'f', 'g',
                'argument_load', 'before_scheduler_validation', 'deadlock', 'dominator',
-               'eventgroup', 'invalid_mutex', 'priority_inversion', 'wrong_scheduler_access']
+               'eventgroup', 'invalid_mutex', 'priority_inversion', 'wrong_scheduler_access',
+	       'start_scheduler_relation']
   freertos_targets += custom_target('freertos-' + app,
                                     input : ['FreeRTOS/' + app + '.cc'] + freertos_includes,
                                     output : ['freertos-' + app + '.ll'],
