meson: require llvm7 and clang7
This enables some new features, that are relevant for the next commit.

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -1,4 +1,4 @@
-clang = find_program('clang')
+clang = find_program('clang-7')
 nop = find_program('true')
 
 # compiler flags to generate annotated IR
