--- a/meson.build
+++ b/meson.build
@@ -14,8 +14,16 @@ subdir('steps')
 subdir('test')
 subdir('appl')
 
-test('ara tester',
-	py3_inst,
+test('priority-inversion',
+  py3_inst,
+  #args: [files('arsa.py', 'test/data/GPSLogger.ll','test/data/ScreenManager.ll','test/data/GPSThread.ll','test/data/SDThread.ll','test/data/LEDThread.ll','test/data/ButtonsThread.ll','test/data/SdFatSPIDriver.ll','test/data/GPSDataModel.ll','test/data/SpeedScreen.ll'), '--os', 'freertos'],
+  args : [files('arsa.py'), '--os', 'osek', osek_targets[3]],
+  env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
+)
+
+
+#test('ara tester',
+	#py3_inst,
 	#args : [files('arsa.py', 'test/data/GPSLogger.ll','test/data/ScreenManager.ll','test/data/GPSThread.ll','test/data/SDThread.ll','test/data/LEDThread.ll','test/data/ButtonsThread.ll','test/data/SdFatSPIDriver.ll','test/data/GPSDataModel.ll','test/data/SpeedScreen.ll'), '--os', 'freertos','--application_file' , 'invalid_mutex.cc'],
 	
 	#args : [files('arsa.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'timer.cc'],
@@ -23,13 +31,8 @@ test('ara tester',
     #args : [files('arsa.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'loop_detection.cc'],
     #args : [files('arsa.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'before_scheduler_validation.cc'],
     # priority inversion test case
-    args : [files('arsa.py'), '--os', 'freertos', freertos_targets[12]],
+    #args : [files('arsa.py'), '--os', 'freertos', freertos_targets[2]],
 
-	env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
-)
+	#env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
+#)
 
-test('priority-inversion',
-  py3_inst,
-  args : [files('arsa.py'), '--os', 'freertos', freertos_targets[13]],
-  env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
-)
