tests: add validation test invalid_mutex

--- a/test/meson.build
+++ b/test/meson.build
@@ -10,4 +10,10 @@ test('priority_inversion',
         env : ['PYTHONPATH=' + ':'.join([source_dir, passdir, 'subprojects/libgraph'])]
 )
 
+test('invalid_mutex',
+        py3_inst,
+        args : [files('validation.py'), 'freertos', files('invalid_mutex.json'), freertos_targets[12]],
+        env : ['PYTHONPATH=' + ':'.join([source_dir, passdir, 'subprojects/libgraph'])]
+)
+
 subdir('native_step_test')
