Added test cases to ARSA project:
- deadlock detection
- priority inversion
- loop detection
- topological sort
- critical region detection
- start scheduler relation
- semaphore use
- mutex use
- eventgroup use
- isr api use

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -18,9 +18,9 @@ freertos_includes = files(join_paths(freertos_path, 'croutine.h'),
                           join_paths(freertos_path, 'task.h'))
 
 freertos_targets = []
-foreach app : ['a', 'b', 'c', 'd', 'topological_sort', 'f', 'g',
+foreach app : ['a', 'invalid_isr_syscall', 'c', 'loop_detection', 'topological_sort', 'f', 'g',
                'argument_load', 'start_scheduler_relation', 'deadlock', 'dominator',
-               'eventgroup', 'invalid_mutex', 'priority_inversion', 'critical_region_detection']
+               'eventgroup', 'invalid_mutex', 'priority_inversion', 'critical_region_detection', 'invalid_semaphore' ]
   freertos_targets += custom_target('freertos-' + app,
                                     input : ['FreeRTOS/' + app + '.cc'] + freertos_includes,
                                     output : ['freertos-' + app + '.ll'],
