--- a/meson.build
+++ b/meson.build
@@ -17,7 +17,7 @@ subdir('test')
 test('priority-inversion',
   py3_inst,
   #args: [files('arsa.py', 'test/data/GPSLogger.ll','test/data/ScreenManager.ll','test/data/GPSThread.ll','test/data/SDThread.ll','test/data/LEDThread.ll','test/data/ButtonsThread.ll','test/data/SdFatSPIDriver.ll','test/data/GPSDataModel.ll','test/data/SpeedScreen.ll'), '--os', 'freertos'],
-  args : [files('arsa.py'), '--os', 'osek', osek_targets[3]],
+  args : [files('arsa.py'), '--os', 'freertos', freertos_targets[1]],
   env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
 )
 
