meson: build debugoptimized by default

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 project('arsa', 'cpp',
-  default_options : ['warning_level=3', 'cpp_std=c++17'])
+  default_options : ['warning_level=3',
+                     'cpp_std=c++17',
+                     'buildtype=debugoptimized'])
 
 cython = find_program('cython')
 py3_mod = import('python')
