--- a/test/native_step_test/meson.build
+++ b/test/native_step_test/meson.build
@@ -1,5 +1,5 @@
 test('native_steps',
         py3_inst,
         args : files('native_steps.py'),
-        env : ['PYTHONPATH=' + ':'.join([source_dir, passdir, graphdir])]
+        env : ['PYTHONPATH=' + ':'.join([source_dir, stepdir, graphdir])]
 )
