--- a/meson.build
+++ b/meson.build
@@ -24,10 +24,10 @@ test('arsa_tester',
   #args: [files('arsa.py', 'test/data/GPSLogger.ll','test/data/ScreenManager.ll','test/data/GPSThread.ll','test/data/SDThread.ll','test/data/LEDThread.ll','test/data/ButtonsThread.ll','test/data/SdFatSPIDriver.ll','test/data/GPSDataModel.ll','test/data/SpeedScreen.ll'), '--os', 'freertos'],
   #args: [files('arsa.py', 'Smartplug/main.ll','Smartplug/cloud.ll','Smartplug/http_server.ll','Smartplug/plc.ll','Smartplug/power_meter.ll','Smartplug/system.ll'), '--os', 'freertos'],
   
-  #args : [files('arsa.py'), '--os', 'freertos', freertos_targets[2]],
+  args : [files('arsa.py'), '--os', 'freertos', freertos_targets[1]],
   #args : [files('arsa.py'), '--os', 'freertos', freertos_targets[16]],
 
-  args : [files('arsa.py'), '--os', 'osek', osek_targets[4]],
+  #args : [files('arsa.py'), '--os', 'osek', osek_targets[4]],
 
   #args : [files('arsa.py'), '--os', 'osek', '--log-level', 'debug', osek_targets[3]],
 
