--- a/steps/native/meson.build
+++ b/steps/native/meson.build
@@ -30,6 +30,8 @@ plib = py3_inst.extension_module('native_step',
         'Validation.cpp',
         'IntermediateAnalysis.cpp',
         'llvm.cpp',
+        'llvm_dumper.cpp',
+        'llvm_common.cpp',
         'test.cpp'),
   dependencies: [log_dep, py3_inst.dependency(), graph_dep, llvm_dep]
 )
