--- a/meson.build
+++ b/meson.build
@@ -45,18 +45,8 @@ test('ara_tester',
    env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
 )
 
-
-#test('ara tester',
-	#py3_inst,
-	#args : [files('ara.py', 'test/data/GPSLogger.ll','test/data/ScreenManager.ll','test/data/GPSThread.ll','test/data/SDThread.ll','test/data/LEDThread.ll','test/data/ButtonsThread.ll','test/data/SdFatSPIDriver.ll','test/data/GPSDataModel.ll','test/data/SpeedScreen.ll'), '--os', 'freertos','--application_file' , 'invalid_mutex.cc'],
-	
-	#args : [files('ara.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'timer.cc'],
-
-    #args : [files('ara.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'loop_detection.cc'],
-    #args : [files('ara.py','test/data/appl.ll'), '--os', 'freertos','--application_file' , 'before_scheduler_validation.cc'],
-    # priority inversion test case
-    #args : [files('ara.py'), '--os', 'freertos', freertos_targets[2]],
-
-	#env : ['PYTHONPATH=' + passdir + ':' + 'subprojects/libgraph']
-#)
-
+test('ospert',
+   py3_inst,
+   args: [files('ara.py'), freertos_ospert, '--os', 'freertos', '--log-level', 'debug'],
+   env : ['PYTHONPATH=' + stepdir + ':' + graphdir]
+)
